fix layout shift

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -14,16 +14,3 @@
   align-items: center;
   width: 100%;
 }
-
-/* Mobile */
-@media (max-width: 700px) {
-  .center {
-    padding: 8rem 0 6rem;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
